# freeglut-cmake-configure

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md
scripts/: build.sh.in  clean.sh.in  run.sh.in
src/: common.h  main.cpp
